<resources>
    <string name="app_name">UITestExamples</string>
    <string name="text_next">Next</string>
    <string name="text_start">Start</string>
    <string name="text_next_fragment">Next fragment</string>
    <string name="text_next_activity">Next Activity</string>
    <string name="text_secondary_fragment">This is Secondary Fragment</string>
    <string name="text_mainactivity">MainActivity</string>
    <string name="text_back">Back</string>
    <string name="text_secondaryactivity">SecondaryActivity</string>

    <string name="text_oops">Oops!</string>
    <string name="text_movie_title">Movie Title</string>
    <string name="test_movie_description">This is a description of the movie.</string>
    <string name="text_list_movie_directors">Directors</string>
    <string name="text_list_movie_star_actors">Star Actors</string>
    <string name="text_directors">Directors:</string>
    <string name="text_star_actors">Star Actors:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_launch_dialog">launch dialog</string>
    <string name="text_ok">Ok</string>
    <string name="text_capture_input">Enter your name</string>
    <string name="text_enter_name">Enter your name</string>

</resources>